--- a/aws-lambda-adot-example/data/init_load.ipynb
+++ b/aws-lambda-adot-example/data/init_load.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "aws_admin_session = boto3.Session(profile_name='admin')\n",
+    "aws_admin_session = boto3.Session()\n",
     "\n",
     "dynamodb = aws_admin_session.client('dynamodb', region_name = 'ap-southeast-1')\n",
     "\n",
